examples/test/testpolicy14730.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14730
  namespace: namespace29
spec:
  podSelector:
    matchLabels:
      key4: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value7
          key42: value47
          key21: value21
      podSelector:
        matchLabels:
          key36: value7
          key14: value0
